
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1704 - October 11, 2006)
====================================

* Remove broken image icons from error.js (1703)
* Fix the 'Remove Locks' functionality. (1700)
* New Installer Theme. (1699)
* Added setup.updates.sql that contains the UPDATE queries to run at end of install script. (1697)
* updated eForm to version 1.4
* separate welcome page logic from UI (welcome.html in manager themes) to allow theme designer to easily style of welcome page
* fix js bug with "Access Permissions" checkbox in mutate_content, mutate_module, mutate_tmpvar
* fix: hide working status after module loads
* fix js bug in mutate_content: tpSetting was not defined
* fix: context menu in MODx theme + updates
* [FS#203] Introducing 'publish' permission.
* Bugfix: Set correct default value for language select box (edit user dlg)
* Cosmetics: Removed zero-value from phone and mobile of default admin
* Cosmetics: Ordering phone/mobile/fax input fields (edit user dlg)
* [FS#366] (1644)
* [FS#309] Additional fix applied. (1641)
* Got rid of 'isNumber'-function. (1641)
* [FS#561] Fix for not being able to delete a manager user. (1678)
* [FS#563] Fix broken image paths in the context menu. (1677)
* [FS#552] Sorts out the 'saving of default values' problem in Manager User Settings. (1668)
* Updated default content (still needs a little work). (1683)
* temporary source formatting solution for TinyMCE hardcoded in JS -- to be removed at a future date (1671)
* updated TinyMCE to 2.0.6.1 version (1669,1670)
* Setting n-m ranges in the DocManager now functions as intended. (1656)
* Correction to TV count checks for Assigned TVs in the templates section, will now only display sort option if TV count is greater than 1. (1656)