@@ -3,9 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 5 (rev 1704 - October 11, 2006)
+MOD 0.9.5 beta 5 (rev 1705 - October 11, 2006)
 ====================================
 
+* [FS#203] Added default publish permission value to system settings. (1702)
 * Remove broken image icons from error.js (1703)
 * Fix the 'Remove Locks' functionality. (1700)
 * New Installer Theme. (1699)
